# gradual

./: .gitignore  README.md
backend/: README.md  pyproject.toml  server.py
backend/app/: auth.py  emails.json  events.json  fetch_emails.py  fetch_events.py  main.py
backend/apps/: ai.py  api.py  auth.py  db.py  email.py  events.py  fetch_emails.py  fetch_events.py  pdf.py  scheduler.py  server.py
backend/modal/: client.py  llm-server.py  modal.py  modalai.py  test_summary.py
backend/scripts/: pdfparser.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  main.tsx
frontend/src/auth/: Auth0ProviderWithNavigate.tsx  AuthContext.tsx  ProtectedRoute.tsx  api.ts
frontend/src/components/: navbar.tsx  particleBg.tsx
frontend/src/components/tree/: graph.tsx  labelNode.tsx  labelTitleNode.tsx  node.tsx
frontend/src/components/ui/: loginButton.tsx
frontend/src/pages/: HomePage.tsx  LandingPage.tsx  Login.tsx  LoginPage.tsx  MyTree.tsx  TokenCallback.tsx
