[project]
name = "Gradual"
version = "0.1.0"
description = "Gradual API: Remember what you did yesterday"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "pdfplumber>=0.11.6",
    "python-dotenv>=1.1.0",
    "python-jose>=3.4.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
]
